# everinst

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md  appimage.yml  build.sh  default.nix  docker.sh
.cargo/: config
assets/: everinst.desktop
src/: main.rs  updater.rs
