[package]
name = "everinst"
description = "An installer for the Everest mod loader"
homepage = "https://github.com/leo60228/everinst"
repository = "https://github.com/leo60228/everinst"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

[dependencies]
iui = { git = "https://github.com/rust-native-ui/libui-rs.git" }
which = "2.0.1"
open = "1.2.2"
serde_json = "1.0"
reqwest = "0.9"
nfd = "0.0.4"
dirs = "1.0"
zip = "0.5.1"
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.2"
system_uri = { version = "0.4.0", default-features = false }

[package.metadata.deb]
depends = "libgtk-3-0, libglib2.0-0, libcairo2, libpango-1.0-0, libc6, libgcc1, mono-runtime (>= 5.0)"
assets = [
  ["assets/everinst.desktop", "usr/share/applications/", "644"],
  ["assets/everinst.png", "usr/share/pixmaps/", "644"],
  ["target/release/everinst", "usr/bin/", "755"]
]
